--- a/forum/templates/forum/search.html
+++ b/forum/templates/forum/search.html
@@ -1,6 +1,12 @@
 {% extends 'forum/index.html' %}
 {% load static %}
 
+
+{% block style %}
+    <link rel="stylesheet" href="{% static 'forum/css/search-page.css' %}">
+{% endblock %}
+
+
 {% block leftAside %}
 {% endblock %}
 
