--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -5,7 +5,7 @@
     <section>
         <div class="topDescription">
             <div class="topic_left">
-                <h3>Home Page</h3>
+                <h3>{% block PageName %}Home Page{% endblock %}</h3>
             </div>
         </div>
         {% if page_list %}
