--- a/forum/templates/forum/index.html
+++ b/forum/templates/forum/index.html
@@ -25,19 +25,21 @@
         {% block leftAside %}
             <h3>Following topics</h3>
             <a class="popular_topics" href="{% url 'forum:popular_topics' %}">Popular Topics</a>
-            {% if user.is_authenticated %}
-                {% if user.topic_followers.all %}
-                    {% for topic in user.topic_followers.all %}
+            <div class="left-aside-scroll">
+                {% if user.is_authenticated %}
+                    {% if user.topic_followers.all %}
+                        {% for topic in user.topic_followers.all %}
+                            <a href="{% url 'forum:topic' topic.slug %}">t/{{ topic.slug }}</a>
+                        {% endfor %}
+                    {% else %}
+                        <a>You don't follow any topics</a>
+                    {% endif %}
+                {% else %}
+                    {% for topic in topTopics %}
                         <a href="{% url 'forum:topic' topic.slug %}">t/{{ topic.slug }}</a>
                     {% endfor %}
-                {% else %}
-                    <a>You don't follow any topics</a>
                 {% endif %}
-            {% else %}
-                {% for topic in topTopics %}
-                    <a href="{% url 'forum:topic' topic.slug %}">t/{{ topic.slug }}</a>
-                {% endfor %}
-            {% endif %}
+            </div>
         {% endblock leftAside %}
     </div>
 
