--- a/forum/templates/forum/topic_details.html
+++ b/forum/templates/forum/topic_details.html
@@ -28,7 +28,9 @@
         {% endfor %}
             {% include 'forum/widgets/paginator.html' %}
         {% else %}
-            <p>Não há posts</p>
+            <article>
+                <p>Não há posts</p>
+            </article>
         {% endif %}
         </section>
     </section>
