--- a/forum/templates/forum/widgets/share_button.html
+++ b/forum/templates/forum/widgets/share_button.html
@@ -3,7 +3,7 @@
 
 <section class="share-dropdown">
     <img src="{% static 'forum/img/share_button.png' %}" id="commenticon" style="margin-left: 20px">
-    <span class="share-text">Share Post</span>
+    <p class="share-text">Share Post</p>
     <div class="share-content">
         <div class="share-element">
             <img src="{% static 'forum/img/fb_icon.png' %}">
