--- a/forum/templates/registration/password_reset_complete.html
+++ b/forum/templates/registration/password_reset_complete.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block articles %}
-<section>
-<h1>Password reset complete</h1>
-<a href="{% url 'forum:home' %}">Click here to get back to the forum</a>
-</section>
+    <section class="password_reset">
+        <h1>Password reset complete</h1>
+        <a class="go_back" href="{% url 'forum:home' %}">Click here to get back to the forum</a>
+    </section>
 {% endblock %}
