--- a/forum/templates/registration/password_reset_done.html
+++ b/forum/templates/registration/password_reset_done.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block articles %}
-    <section>
+    <section class="password_reset">
         <h1>Check your Inbox</h1>
         <p>We've send you the email with the reset link, you should receive it shortly</p>
-        <a href="{% url 'forum:home' %}">Click here to get back to the forum</a>
+        <a class="go_back" href="{% url 'forum:home' %}">Click here to get back to the forum</a>
     </section>
 {% endblock %}
