--- a/forum/templates/registration/password_reset_form.html
+++ b/forum/templates/registration/password_reset_form.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block articles %}
-    <section>
+    <section class="password_reset">
         <h1>Forgot your password?</h1>
         <p>Please enter your email and we'll send you an email with the reset link</p>
-        <form method="post">
+        <form method="post" class="reset_form">
             {% csrf_token %}
-            {{ form.email.label }}: <br>
+            <a class="label">{{ form.email.label }}: </a> <br>
             {{ form.email }} <br>
-            <input type="submit" value="Reset Password">
+            <input type="submit" value="Reset Password" class="resetButton">
         </form>
     </section>
 {% endblock %}
