--- a/forum/static/forum/css/forms.css
+++ b/forum/static/forum/css/forms.css
@@ -16,7 +16,7 @@
 
 .editProfile{
     display: flex;
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(255,255,255, 0.1);
 }
 
 .login-container{
@@ -183,8 +183,9 @@
     font-size: 0.7rem;
 }
 
-.login-form a:nth-child(4){
+.login-form a:nth-child(4), .login-form a:nth-child(5){
     font-size: 0.7rem;
+    margin-top: .6rem;
 }
 
 .login-art img, .signup-art img{
@@ -204,4 +205,56 @@
     justify-content: start;
     width: 65%;
     display: none;
+}
+
+.password_reset{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.go_back{
+    margin-top: 50px;
+    font-size: 1rem;
+    color: #414059;
+}
+
+.password_reset h1{
+    margin-top: 3rem;
+    margin-bottom: 0;
+    font-size: 2rem;
+    color: #414059;
+}
+
+.password_reset p{
+    font-size: 1rem;
+    color: #A7A5E6;
+}
+
+.reset_form{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.label{
+    color: gray;
+    margin-top: 15px;
+
+}
+
+.reset_form input{
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid gray;
+    margin-top: 10px;
+    text-align: center;
+    font-size: 1rem;
+}
+
+.reset_form input[type="submit"]{
+    margin-top: 30px;
+    border: none;
+    font-size: .8rem;
 }
