--- a/forum/static/forum/css/share_button.css
+++ b/forum/static/forum/css/share_button.css
@@ -1,30 +1,42 @@
 .share-dropdown {
-    position: relative;
-    display: inline-block;
-    width: fit-content;
+    display: flex;
+    margin: 0;
+    align-items: center;
     width: -moz-fit-content;
-    cursor: default;
+    width: fit-content;
+    position: relative;
 }
 
 .share-text {
     color: gray;
+    font-size: .9rem;
     text-align: center;
+    /*margin-left: 5px;*/
+    margin: 0 0 0 5px;
 }
 
 .share-element {
-    padding: 5px;
+    padding: 5px 0;
 }
 
-.share-element div, .share-element img {
-    display: inline-block;
+.share-element img {
+    margin: 0 5px;
 }
 
 .share-content {
     display: none;
     position: absolute;
+    top: 25px;
+    left: 20px;
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    padding: 0 5px;
+    flex-direction: column;
+    border-radius: 5px;
+}
+
+.share-element{
+    display: flex;
+    width: 100%;
 }
 
 .share-content img {
@@ -37,6 +49,14 @@
     color: black;
 }
 
+.share-element:hover{
+    background-color: #A7A5E6;
+}
+
+.share-element:hover div a{
+    color: white;
+}
+
 .share-dropdown:hover .share-content {
-    display: block;
+    display: flex;
 }
