--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -1,13 +1,21 @@
 {% extends 'forum/index.html' %}
 {% load static %}
 
+{% block style %}
+    <link rel="stylesheet" href="{% static 'forum/css/topic_card.css' %}">
+{% endblock %}
+
 {% block articles %}
     <section>
         <div class="topDescription">
             <div class="topic_left">
-                <h3>Home Page</h3>
+                <h3>{% block PageName %} Home Page {% endblock %}</h3>
+            </div>
+            <div class="topic_right">
+                {% block PageLink %}<a href="#" class="home_new-posts">See the newest posts &rarr;</a>{% endblock %}
             </div>
         </div>
+
         {% if page_list %}
             {% for post in page_list %}
                 {% include 'forum/cards/post_card.html' %}
