--- a/forum/templates/registration/password_change_form.html
+++ b/forum/templates/registration/password_change_form.html
@@ -4,16 +4,16 @@
 {% block leftAside %}{% endblock %}
 
 {% block articles %}
-    <section>
+    <section class="password_reset">
         <h1>Change Password</h1>
-        <form method="post">
+        <form method="post" class="reset_form">
             {% csrf_token %}
             {% for field in form %}
-                {{ field.label }} <br>
-                {{ field }} <br>
+                <a class="label"> {{ field.label }} </a>
+                {{ field }}
                 {{ field.errors }}
             {% endfor %}
-            <input type="submit" value="Change Password">
+            <input type="submit" value="Change Password" class="resetButton">
         </form>
     </section>
 {% endblock %}
