--- a/forum/templates/registration/password_reset_confirm.html
+++ b/forum/templates/registration/password_reset_confirm.html
@@ -5,16 +5,16 @@
 {% endblock %}
 
 {% block articles %}
-    <section>
+    <section class="password_reset">
         {% if validlink %}
-            <form method="post">
+            <form method="post" class="reset_form">
                 {% csrf_token %}
                 {% for field in form %}
                     {{ field.label }} <br>
                     {{ field }} <br>
                     {{ field.errors }} <br>
                 {% endfor %}
-                <input type="submit" value="Change Password">
+                <input type="submit" value="Change Password" class="resetButton">
             </form>
         {% else %}
             <p>The reset link is invalid.</p>
