--- a/forum/static/forum/css/forms.css
+++ b/forum/static/forum/css/forms.css
@@ -226,6 +226,13 @@
     color: #414059;
 }
 
+.help_text{
+    font-size: 1.2rem;
+    color: #414059;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
 .password_reset p{
     font-size: 1rem;
     color: #A7A5E6;
@@ -238,10 +245,25 @@
     align-items: center;
 }
 
+.topic_form{
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.topic_form input{
+    margin-top: 2rem;
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid gray;
+    text-align: center;
+    font-size: 1rem;
+}
+
 .label{
     color: gray;
     margin-top: 15px;
-
 }
 
 .reset_form input{
@@ -253,8 +275,14 @@
     font-size: 1rem;
 }
 
-.reset_form input[type="submit"]{
+.reset_form input[type="submit"], .topic_form input[type="submit"]{
     margin-top: 30px;
     border: none;
     font-size: .8rem;
+}
+
+.topic_form textarea{
+    background-color: transparent;
+    font-size: .8rem;
+    margin-top: 2rem;
 }
