--- a/forum/static/forum/css/main.css
+++ b/forum/static/forum/css/main.css
@@ -46,6 +46,7 @@ header{
     margin-right: 20px;
     width: 3.1em;
     height: 3.1em;
+    box-shadow: 5px 3px 10px 0px rgba(0,0,0,0.2);
 }
 
 .searchButton{
@@ -104,7 +105,7 @@ article{
     background-color: white;
     display: flex;
     flex-direction: column;
-    box-shadow: 5px 8px rgba(0,0,0, 0.1);
+    box-shadow: 5px 8px 10px 0px rgba(0,0,0, 0.1);
     cursor: pointer;
 }
 
@@ -124,7 +125,7 @@ article:hover{
     display: flex;
     align-items: center;
     position: relative;
-    box-shadow: 1px 4px rgba(0,0,0, 0.1);
+    box-shadow: 1px 4px 10px 0px rgba(0,0,0, 0.1);
     margin-bottom: 20px;
 }
 
