--- a/forum/static/forum/css/right-aside.css
+++ b/forum/static/forum/css/right-aside.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 2px 3px rgba(0,0,0,0.1);
+    box-shadow: 2px 3px 10px 0px rgba(0,0,0,0.1);
     font-size: 16px;
 }
 
