--- a/forum/templates/forum/home.html
+++ b/forum/templates/forum/home.html
@@ -9,10 +9,26 @@
     <section>
         <div class="topDescription">
             <div class="topic_left">
-                <h3>{% block PageName %}Home Page{% endblock %}</h3>
-            </div>
-            <div class="topic_right">
-                {% block PageLink %}<a href="{% url 'forum:new_posts' %}" class="home_new-posts">See the newest posts &rarr;</a>{% endblock %}
+                <div id="dropdown-post-nav">
+                    <div id="dropdown-btn">
+                        <h3>{% block PageName %}Home Page{% endblock %}</h3>
+                        <img id="down-arrow" src="{% static 'forum/img/down_arrow.png' %}">
+                    </div>
+                    <div class="post-nav-content">
+                        <div class="dropdown-element">
+                            {% block firstPageLink %}
+                                <a href="{% url 'forum:new_posts' %}">New Posts</a>
+                            {% endblock %}
+                        </div>
+                        {% if user.is_authenticated %}
+                            <div class="dropdown-element">
+                                {% block secondPageLink %}
+                                    <a href="{% url 'forum:followed_posts' %}">Followed Posts</a>
+                                {% endblock %}
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
 
